# GraphTool

./: .env.example  .gitignore  CHANGELOG.md  README.md  ingest.py  main.py  pyproject.toml
config/: knowledge_scopes.json
graphtool/: corpus.py  corpus_stores.py  knowledge_scopes.py  run_logging.py  runtime.py  source.py  storage.py
graphtool/agents/: __init__.py
graphtool/chunking/: __init__.py  json_store.py  markdown.py  store.py  types.py
graphtool/graph/: __init__.py  base.py  chunk_graph.py  combiner.py  embedding_store.py  entity_matching.py  extraction.py  extraction_store.py  generator.py  json_store.py  provenance.py  resolution_embeddings.py  resolution_merge.py  resolver.py  sqlite_store.py  taxonomy.py  types.py
graphtool/ingestion/: __init__.py  audio.py  documents.py  pdf.py  presentation.py
graphtool/llm/: __init__.py  azure_openai.py  base.py  config.py  types.py
graphtool/retrieval/: __init__.py  bm25.py  chunk_index.py  context.py  embedding_store.py  graph_paths.py  graph_retriever.py  hybrid_retriever.py  references.py  retriever.py  scoring.py  types.py
graphtool/visualization/: __init__.py  knowledge_base.py  pyvis.py
logs/: .gitkeep
telegram_bot/: __init__.py  __main__.py  app.py  config.py  handlers.py
tests/: test_corpus.py  test_ingest.py  test_knowledge_scopes.py  test_main.py  test_run_logging.py  test_runtime.py  test_source.py
tests/chunking/: test_chunk_json_store.py  test_chunk_store.py  test_markdown.py
tests/graph/: test_extraction_store.py  test_generator.py  test_json_store.py  test_provenance.py  (+4 more)
(+38 files in other folders)
