[project]
name = "graphtool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.0",
    "numpy>=2.0.0",
    "openai>=2.0.0",
    "pypdf>=6.0.0",
    "pydantic>=2.0.0",
    "pyvis>=0.3.2",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.8",
    "tiktoken>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphtool", "telegram_bot"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
